syntax = "proto3";
package jackaldao.canine.storage;

import "gogoproto/gogo.proto";
import "canine-chain/storage/params.proto";
import "canine-chain/storage/contracts.proto";
import "canine-chain/storage/active_deals.proto";
import "canine-chain/storage/providers.proto";
import "canine-chain/storage/pay_blocks.proto";
import "canine-chain/storage/client_usage.proto";
import "canine-chain/storage/strays.proto";
import "canine-chain/storage/fid_cid.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/jackal-dao/canine/x/storage/types";

// GenesisState defines the storage module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated Contracts contractsList = 2 [ (gogoproto.nullable) = false ];
  repeated ActiveDeals activeDealsList = 4 [ (gogoproto.nullable) = false ];
  repeated Providers providersList = 5 [ (gogoproto.nullable) = false ];
  repeated PayBlocks payBlocksList = 6 [ (gogoproto.nullable) = false ];
  repeated ClientUsage clientUsageList = 7 [ (gogoproto.nullable) = false ];
  repeated Strays straysList = 8 [ (gogoproto.nullable) = false ];
  repeated FidCid fidCidList = 3 [ (gogoproto.nullable) = false ];
  // this line is used by starport scaffolding # genesis/proto/state
}
